[package]
name = "ledger_canister_blocks_decoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
ic-ledger-core =  { git = "https://github.com/dfinity/ic.git" }
ledger-canister =  { git = "https://github.com/dfinity/ic.git" }
rusqlite = "~0.25.4"